--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Weather Api</title>
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/screen.css">
-  </head>
-  <body>
-    <h1 class='hello-world'></h1>
-    <script src="/main.js" charset="utf-8"></script>
-  </body>
+
+<head lang="en">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Weather Api</title>
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="stylesheet" href="/screen.css">
+</head>
+
+<body>
+  <h1>Current Weather</h1>
+  <input class="search-button" type="text" placeholder="text here" name="search"></input>
+  <button>Submit</button>
+  <h3 class="city"></h3>
+  <h3 class="humidity"></h3>
+  <script src="/main.js" charset="utf-8"></script>
+
+</body>
+
 </html>
