--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,21 @@
 </head>
 
 <body>
-  <h1>Current Weather</h1>
-  <input class="search-button" type="text" placeholder="text here" name="search"></input>
-  <button>Submit</button>
-  <h3 class="city"></h3>
-  <h3 class="humidity"></h3>
+  <h1 class="title">Current Weather</h1>
+  <h2 class="message"></h2>
+  <section>
+    <input class="search-button" type="text" placeholder="text here" name="search"></input>
+    <button>Submit</button>
+  </section>
+  <section>
+    <h2>Temp K</h2>
+    <h2 class="temp"></h2>
+    <h2>Humidity</h2>
+    <h2 class="humidity"></h2>
+    <h2>Wind Speed</h2>
+    <h2 class="wind-speed"></h2>
+  </section>
   <script src="/main.js" charset="utf-8"></script>
-
 </body>
 
 </html>
