--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,17 @@
 
 <body>
   <h1 class="title">Current Weather</h1>
-  <h2 class="message"></h2>
   <section>
     <input class="search-button" type="text" placeholder="text here" name="search"></input>
-    <button>Submit</button>
+    <button class="button">Submit</button>
   </section>
   <section>
-    <h2>Temp K</h2>
+    <h2>Temperature K</h2>
     <h2 class="temp"></h2>
     <h2>Humidity</h2>
     <h2 class="humidity"></h2>
+    <h2>Pressure</h2>
+    <h2 class="pressure"></h2>
     <h2>Wind Speed</h2>
     <h2 class="wind-speed"></h2>
   </section>
