--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,13 @@
   <title>Weather Api</title>
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="stylesheet" href="/screen.css">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <h1 class="title">Current Weather</h1>
+  <h1 class="title">Today's Forecast</h1>
   <section>
-    <input class="search-button" type="text" placeholder="text here" name="search"></input>
+    <input class="search-button" type="text" placeholder="city or zip" name="search"></input>
     <button class="button">Submit</button>
   </section>
   <section>
